[gd_scene load_steps=5 format=3 uid="uid://68ru45lth0x3"]

[ext_resource type="Texture2D" uid="uid://4jt0s7s3pwsn" path="res://Assets/background.jpg" id="1_kgwe7"]
[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_pnpj2"]

[sub_resource type="LabelSettings" id="LabelSettings_3n6d4"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_wwbo8"]
font_size = 28

[node name="Game" type="Node2D"]
script = ExtResource("1_pnpj2")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(326, 140)
scale = Vector2(0.3825, 0.3825)
texture = ExtResource("1_kgwe7")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Player_score" type="Label" parent="UI"]
layout_mode = 0
offset_left = 373.0
offset_top = 228.0
offset_right = 413.0
offset_bottom = 263.0
text = "0"
label_settings = SubResource("LabelSettings_3n6d4")

[node name="Dealer_score" type="Label" parent="UI"]
layout_mode = 0
offset_left = 246.0
offset_top = 51.0
offset_right = 286.0
offset_bottom = 86.0
text = "0"
label_settings = SubResource("LabelSettings_3n6d4")

[node name="Buttons" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 436.0
offset_top = 230.0
offset_right = 476.0
offset_bottom = 270.0

[node name="Hit" type="Button" parent="UI/Buttons"]
layout_mode = 0
offset_left = 69.0
offset_top = -36.0
offset_right = 100.0
offset_bottom = -5.0
text = "Hit"

[node name="Stand" type="Button" parent="UI/Buttons"]
layout_mode = 0
offset_left = 70.0
offset_right = 78.0
offset_bottom = 8.0
text = "Stand"

[node name="Double Down" type="Button" parent="UI/Buttons"]
layout_mode = 0
offset_left = 70.0
offset_top = 36.0
offset_right = 183.0
offset_bottom = 67.0
text = "Double Down"

[node name="Winner" type="Label" parent="UI"]
layout_mode = 0
offset_left = 262.0
offset_top = 142.0
offset_right = 319.0
offset_bottom = 181.0
label_settings = SubResource("LabelSettings_wwbo8")

[node name="Play_again" type="Button" parent="UI"]
layout_mode = 0
offset_left = 66.0
offset_top = 143.0
offset_right = 163.0
offset_bottom = 174.0
text = "Play_again?"

[node name="Player" type="Node2D" parent="."]
position = Vector2(320, 250)

[node name="Card_spawner" type="Marker2D" parent="Player"]
position = Vector2(-370, 0)

[node name="Cards" type="Node2D" parent="Player"]

[node name="Dealer" type="Node2D" parent="."]
position = Vector2(320, 70)

[node name="Card_spawner" type="Marker2D" parent="Dealer"]
position = Vector2(370, 0)

[node name="Cards" type="Node2D" parent="Dealer"]

[connection signal="pressed" from="UI/Buttons/Hit" to="." method="_on_hit_pressed"]
[connection signal="pressed" from="UI/Buttons/Stand" to="." method="_on_stand_pressed"]
[connection signal="pressed" from="UI/Buttons/Double Down" to="." method="_on_double_down_pressed"]
[connection signal="pressed" from="UI/Play_again" to="." method="_on_play_again_pressed"]
